--- a/client/.env
+++ b/client/.env
@@ -1,7 +1,5 @@
 MONGO_URI = mongodb+srv://behmah:ihyeeZ1gTtuyQfAB@cluster0.qz2io.mongodb.net/auth_db?retryWrites=true&w=majority&appName=Cluster0
-
 PORT = 5000
-
 JWT_SECRET = mysecretkey
-
 MODE_ENV = 'development'
+VITE_API_URL = '/api'  # Local development proxy
